Fix spelling/grammar mistakes in handbook

--- a/apps/legacy/src/app/views/pages/handbook/page/Combined_Arms.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Combined_Arms.hbs
@@ -4,62 +4,62 @@
     <p>All elements like Aviation, Reconnaissance, Armour or other Support Units are purely around to support and assist the Infantry Platoon. This section is describing the general relationship and responsibilities.</p>
     <h2 id="platoon_sergeant_forward_air_controller">Platoon Sergeant / Forward Air Controller</h2>
     <ul>
-        <li><span style='color:#087b08'><strong>Doctrine</strong></span> - Connective tissue between the Infantry Platoon and its leader to the Support Elements.</li>
-        <li><span style='color:#087b08'><strong>Communication</strong></span> - Equipped with a Long-Range-Radio he is responsible for the communication between the Infantry Platoon and Support Elements which are not in proximity of the Platoon.
+        <li><span style="color:#087b08"><strong>Doctrine</strong></span> - Connective tissue between the Infantry Platoon and its leader to the Support Elements.</li>
+        <li><span style="color:#087b08"><strong>Communication</strong></span> - Equipped with a Long-Range-Radio he is responsible for the communication between the Infantry Platoon and Support Elements which are not in proximity of the Platoon.
             <ul>
                 <li><strong>Direct</strong> - When directing tasks and request fire support, he is responsible to ensure that no friendlies or civilians are being hurt.</li>
                 <li><strong>Report</strong> - Reports status and upcoming actions by the Infantry Platoon and Support Units to keep all involved up to speed.</li>
                 <li><strong>Review</strong> - Reviews and reports back effectiveness on support requests.</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>Coordination</strong></span> - He coordinates the actions and assignments of the Support Elements in support of the Infantry Platoon.</li>
-        <li><span style='color:#087b08'><strong>Decisions</strong></span> - He is authorized to make decisions in regards on how to deploy the Support Elements based on the directives given by the Platoon Leader.</li>
-        <li><span style='color:#087b08'><strong>Execution</strong></span> - Platoon Leader has ultimate authority. Once the Platoon Leader issues an order on how he want to have Support Elements deployed, it is on the Platoon Sergeant to execute the order.</li>
-        <li><span style='color:#087b08'><strong>Advisement</strong></span> - He may advice and suggest Support Element usage to the Platoon Leader. While he has room to make individual calls and deploys Support Elements alongside operational guidelines.</li>
+        <li><span style="color:#087b08"><strong>Coordination</strong></span> - He coordinates the actions and assignments of the Support Elements in support of the Infantry Platoon.</li>
+        <li><span style="color:#087b08"><strong>Decisions</strong></span> - He is authorized to make decisions in regards on how to deploy the Support Elements based on the directives given by the Platoon Leader.</li>
+        <li><span style="color:#087b08"><strong>Execution</strong></span> - Platoon Leader has ultimate authority. Once the Platoon Leader issues an order on how he want to have Support Elements deployed, it is on the Platoon Sergeant to execute the order.</li>
+        <li><span style="color:#087b08"><strong>Advisement</strong></span> - He may advise and suggest Support Element usage to the Platoon Leader. While he has room to make individual calls and deploys Support Elements alongside operational guidelines.</li>
     </ul>
     <p>The Callsign for the Platoon Sergeant on the Command Net is "Central" in order to prevent confusion with the Platoon Leader himself.</p>
     <h2 id="echo_platoon_support">Echo Platoon Support</h2>
     <ul>
-        <li><span style='color:#087b08'><strong>Embedded</strong></span> - Echo is embedded in the main Platoon. They are handled as a regular squad, but with a special set of purpose and capabilities.</li>
-        <li><span style='color:#087b08'><strong>Backline Support</strong></span> - Echo is not a direct frontline units, although in certain situations the might be used as such. They carry heavy weaponry aimed at providing fire support and flank support. In addition the Combat Engineer may be called individually if needed.</li>
-        <li><span style='color:#087b08'><strong>Holding a Sector</strong></span> - Echo is often used to hold a sector reliably due to their heavy weaponry.</li>
-        <li><span style='color:#087b08'><strong>Punching Through</strong></span> - If Echo is Motorized or Mechanized they might be used in certain situations to punch through which will put them ahead of everyone else. This is a situational decision.</li>
+        <li><span style="color:#087b08"><strong>Embedded</strong></span> - Echo is embedded in the main Platoon. They are handled as a regular squad, but with a special set of purpose and capabilities.</li>
+        <li><span style="color:#087b08"><strong>Backline Support</strong></span> - Echo is not a direct frontline units, although in certain situations the might be used as such. They carry heavy weaponry aimed at providing fire support and flank support. In addition, the Combat Engineer may be called individually if needed.</li>
+        <li><span style="color:#087b08"><strong>Holding a Sector</strong></span> - Echo is often used to hold a sector reliably due to their heavy weaponry.</li>
+        <li><span style="color:#087b08"><strong>Punching Through</strong></span> - If Echo is Motorized or Mechanized they might be used in certain situations to punch through which will put them ahead of everyone else. This is a situational decision.</li>
     </ul>
     <p>Detail about Armour can be found in <a href="/handbook/Echo_Platoon_Support">Section 9 - Echo Platoon Support</a>.</p>
     <h2 id="aviation">Aviation</h2>
     <ul>
-        <li><span style='color:#087b08'><strong>On Station / Overwatch</strong></span> - Aviation Unit is in proximity of the AO ready to respond to request.
+        <li><span style="color:#087b08"><strong>On Station / Overwatch</strong></span> - Aviation Unit is in proximity of the AO ready to respond to request.
             <ul>
                 <li>Default Aviation behaviour.</li>
                 <li>Aviation may carefully scout while taking minimal risk.</li>
                 <li>FAC may direct focus on certain areas for overwatch.</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>Scouting</strong></span> - Same as overwatch but specifically requested.
+        <li><span style="color:#087b08"><strong>Scouting</strong></span> - Same as overwatch but specifically requested.
             <ul>
                 <li>Aviation may take more risk.</li>
                 <li>On request by FAC to get intel on specific areas.</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>RTB</strong></span> - Return to Base (RTB) should always be coordinated between Aviation Unit and FAC.
+        <li><span style="color:#087b08"><strong>RTB</strong></span> - Return to Base (RTB) should always be coordinated between Aviation Unit and FAC.
             <ul>
                 <li>Critical damage may force RTB.</li>
                 <li>Coordination with FAC in order to ensure availability at critical times.</li>
                 <li>May an early RTB for refueling or rearming gets requested.</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>Pickup and Transportation</strong></span> - The transportation of units whether insertion, reinforcements or relocation.
+        <li><span style="color:#087b08"><strong>Pickup and Transportation</strong></span> - The transportation of units whether insertion, reinforcements or relocation.
             <ul>
                 <li>Requested for by FAC.</li>
                 <li>Coordination of Landing Zones.</li>
                 <li>Alternate Landing Zones may be assigned.</li>
-                <li>FAC may inspects Landing Zones to ensure their viability.</li>
-                <li>Further coordination in regards of timing, approach and marking.</li>
+                <li>FAC may inspect Landing Zones to ensure their viability.</li>
+                <li>Further coordination in regard to timing, approach and marking.</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>Supply Drops</strong></span> - Usually sling loaded supply crates.
+        <li><span style="color:#087b08"><strong>Supply Drops</strong></span> - Usually sling loaded supply crates.
             <ul>
                 <li>See Pickup and Transportation.</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>CAS</strong></span> - Close Air Support.
+        <li><span style="color:#087b08"><strong>CAS</strong></span> - Close Air Support.
             <ul>
                 <li>Requested by FAC.</li>
-                <li>Aviation may requests permission from FAC to engage targets without a prior CAS request.</li>
+                <li>Aviation may request permission from FAC to engage targets without a prior CAS request.</li>
                 <li>FAC and Aviation share responsibility of avoiding friendly fire and civilian casualties.</li>
                 <li>Check Aviation ROE for further details.</li>
             </ul></li>
@@ -67,17 +67,17 @@
     <p>Details on how to request certain action can be found in <a href="/handbook/Communication">Section 03 - Communication</a>. Further details about Aviation including ROE can be found in <a href="/handbook/Aviation">Section 10 - Aviation</a>.</p>
     <h2 id="reconnaissance">Reconnaissance</h2>
     <ul>
-        <li><span style='color:#087b08'><strong>General</strong></span> - SGT may not have authority to issue orders by himself and only handles communication between Infantry Platoon and Reconnaissance Units.</li>
-        <li><span style='color:#087b08'><strong>Scouting</strong></span> - The Reconnaissance Team is scouting an assigned area and reports intel.
+        <li><span style="color:#087b08"><strong>General</strong></span> - SGT may not have authority to issue orders by himself and only handles communication between Infantry Platoon and Reconnaissance Units.</li>
+        <li><span style="color:#087b08"><strong>Scouting</strong></span> - The Reconnaissance Team is scouting an assigned area and reports intel.
             <ul>
                 <li>Default task for Reconnaissance.</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>Overwatch</strong></span> - The Reconnaissance Team is overwatching and covering the approach of Infantry Platoon Elements.</li>
-        <li><span style='color:#087b08'><strong>Direct Target Elimination</strong></span> - The Reconnaissance Team is engaging specific target or areas.
+        <li><span style="color:#087b08"><strong>Overwatch</strong></span> - The Reconnaissance Team is overwatching and covering the approach of Infantry Platoon Elements.</li>
+        <li><span style="color:#087b08"><strong>Direct Target Elimination</strong></span> - The Reconnaissance Team is engaging specific target or areas.
             <ul>
                 <li>Unless in self defence require permission by Command.</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>Indirect Target Elimination</strong></span> - The Reconnaissance Team is providing critical target information utilized by another Element to engage the target.
+        <li><span style="color:#087b08"><strong>Indirect Target Elimination</strong></span> - The Reconnaissance Team is providing critical target information utilized by another Element to engage the target.
             <ul>
                 <li>SGT coordinates the joint effort of the Elements.</li>
             </ul></li>
@@ -85,16 +85,16 @@
     <p>Detail about Reconnaissance can be found in <a href="/handbook/Reconnaissance">Section 11 - Reconnaissance</a>.</p>
     <h2 id="armour">Armour</h2>
     <ul>
-        <li><span style='color:#087b08'><strong>General</strong></span> - SGT may not have authority to issue orders by himself and only handles communication between Infantry Platoon and Armoured Units.</li>
-        <li><span style='color:#087b08'><strong>Communication</strong></span> - Armoured Units might be embedded in Platoon Net and directly communicate and coordinate with Infantry Platoon Elements.</li>
-        <li><span style='color:#087b08'><strong>Pickup and Transport</strong></span> - Mechanized Units may transport Infantry Platoon Elements.</li>
-        <li><span style='color:#087b08'><strong>Movement</strong></span> - Mechanized Units and Infantry Movements operate in close proximity.</li>
-        <li><span style='color:#087b08'><strong>Fire Support</strong></span> - Infantry Platoon Elements request fire support on designated targets.</li>
-        <li><span style='color:#087b08'><strong>Overwatch</strong></span> - Armour is overwatching and covering the approach of Infantry Platoon Elements.
+        <li><span style="color:#087b08"><strong>General</strong></span> - SGT may not have authority to issue orders by himself and only handles communication between Infantry Platoon and Armoured Units.</li>
+        <li><span style="color:#087b08"><strong>Communication</strong></span> - Armoured Units might be embedded in Platoon Net and directly communicate and coordinate with Infantry Platoon Elements.</li>
+        <li><span style="color:#087b08"><strong>Pickup and Transport</strong></span> - Mechanized Units may transport Infantry Platoon Elements.</li>
+        <li><span style="color:#087b08"><strong>Movement</strong></span> - Mechanized Units and Infantry Movements operate in proximity.</li>
+        <li><span style="color:#087b08"><strong>Fire Support</strong></span> - Infantry Platoon Elements request fire support on designated targets.</li>
+        <li><span style="color:#087b08"><strong>Overwatch</strong></span> - Armour is overwatching and covering the approach of Infantry Platoon Elements.
             <ul>
                 <li>Alternatively Armour may overwatch an assigned area denying enemy movement.</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>Push</strong></span> - The Armour might act as a moving shield in a coordinated push with the Infantry.</li>
+        <li><span style="color:#087b08"><strong>Push</strong></span> - The Armour might act as a moving shield in a coordinated push with the Infantry.</li>
     </ul>
     <p>Detail about Armour can be found in <a href="/handbook/Armour">Section 12 - Armour</a>.</p>
 </div>
