--- a/apps/legacy/src/app/views/pages/handbook/page/Extended_handbook.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Extended_handbook.hbs
@@ -78,13 +78,13 @@
             </ul></li>
         <li>Set your throttle to maximum, at around 300 km/h start pulling the nose up to 10 degrees, as soon as you are airborne you will raise the gear and bring the flaps up, then begin to climb up to the cruising altitude for that mission.
             <ul>
-                <li>The F/A-18 has an on board indicator, showing you when you are stalling, use it to see when you can pull up.</li>
+                <li>The F/A-18 has an onboard indicator, showing you when you are stalling, use it to see when you can pull up.</li>
             </ul></li>
     </ul>
     <h2 id="landing">Landing</h2>
     <ul>
         <li>Align with the runway in front of you, reduce speed to around 400, deploy max flaps and set the gear down (activate tailhook for carrier landing).</li>
-        <li>Reduce throttle and use the speed brake so that you will touch down on the runway at around 300 km/h, try to follow the middle of the runway as straight as possible, do not apply speed brakes at the moment of touching down. Do not touch the ground with your nose wheel first, keep the plane even and balanced with the nose slightly pointing upwards, slightly losing speed and altitude but not stalling, this will make the back wheels touch the ground first and then gently proceed to point your nose down to the runway, you can now start applying the full speed brake and your throttle to zero. If you feel like you can’t make a safe landing, abort immediately: increase throttle and fly around for a second pass, YOU must be confident in YOUR landing.</li>
+        <li>Reduce throttle and use the speed brake so that you will touch down on the runway at around 300 km/h, try to follow the middle of the runway as straight as possible, do not apply speed brakes at the moment of touching down. Do not touch the ground with your nose wheel first, keep the plane even and balanced with the nose slightly pointing upwards, slightly losing speed and altitude but not stalling, this will make the back wheels touch the ground first and then gently proceed to point your nose down to the runway, you can now start applying the full speed brake and your throttle to zero. If you feel like you can't make a safe landing, abort immediately: increase throttle and fly around for a second pass, YOU must be confident in YOUR landing.</li>
     </ul>
     <p>When landing on a carrier remember it has a height of 35 meters so make sure you fly at around 40-45 meters when touching down. Also make sure you do not undershoot.</p>
     <h2 id="recon">Recon</h2>
@@ -102,27 +102,27 @@
     <ul>
         <li>Fox 2
             <ul>
-                <li>Fox 2 is a infrared guided missile, which means it can lock on to nearby heat signatures (the target can be invisible to your radar and you will still get a lock), the target will not receive a warning about the infrared lock on.</li>
+                <li>Fox 2 is an infrared guided missile, which means it can lock on to nearby heat signatures (the target can be invisible to your radar, and you will still get a lock), the target will not receive a warning about the infrared lock on.</li>
                 <li>It has a 180 degree firing angle (you can fire it in tight turns and without having a direct view of the target, only using the lock on), but it has a maximum range of 5 km from where you can get a lock (e.g. BIM-9X, ASRAAM).</li>
             </ul></li>
         <li>Fox 3
             <ul>
                 <li>Fox 3 is a radar semi-guided missile, that means it needs an active radar lock to engage, typically fired from BVR (beyond visual range), it gives a lock-on warning to the target and has a tight firing angle.</li>
-                <li>Many SPAAG (self propelled anti aircraft gun) have a small range, if you make an effort to stay at a minimum of 4 km away from these vehicles they will not be effective against you.</li>
+                <li>Many SPAAG (self-propelled anti-aircraft gun) have a small range, if you make an effort to stay at a minimum of 4 km away from these vehicles they will not be effective against you.</li>
             </ul></li>
     </ul>
     <p>When entering combat zones stay at high speed to keep the vulnerability time window small.</p>
     <h3 id="surface_to_air_missile_avoidance">Surface-to-Air-Missile avoidance</h3>
     <ul>
-        <li>If you are engaged by a SAM, you have to use CM (counter measures, which come as both flares and chaff) and immediately turn 90 degrees from the incoming missile direction, you want to use flares every 1-3 second (depending on the range from where the missile was launched) up to 5 times to reduce the probability of a missile hitting you.
+        <li>If you are engaged by a SAM, you have to use CM (countermeasures, which come as both flares and chaff) and immediately turn 90 degrees from the incoming missile direction, you want to use flares every 1-3 second (depending on the range from where the missile was launched) up to 5 times to reduce the probability of a missile hitting you.
             <ul>
                 <li>Optional: set one of your radars to 2km or 4km.</li>
-                <li>This way you will be able to switch to it to better identify incoming missiles and once they come closer jerk your aircraft and use counter measures to have the best chance of evading the missile.</li>
+                <li>This way you will be able to switch to it to better identify incoming missiles and once they come closer jerk your aircraft and use countermeasures to have the best chance of evading the missile.</li>
             </ul></li>
     </ul>
     <p>After disengaging you can then turn on GPS again (or use the microDAGR all the time).</p>
     <ul>
-        <li>If you are hit but still able to stir the aircraft toward your closest base, let FAC know that you are disengaging and returning to base to repair. If you can’t maneuver the aircraft, call mayday three times on the radio and eject by double pressing v. In case you manage to land inside the AO, you will have to be rescued by friendly ground units. Once you get back to platoons position you are free to recall yourself to base. If you drop outside the AO just recall yourself directly back to base.</li>
+        <li>If you are hit but still able to stir the aircraft toward your closest base, let FAC know that you are disengaging and returning to base to repair. If you can't maneuver the aircraft, call mayday three times on the radio and eject by double pressing v. In case you manage to land inside the AO, you will have to be rescued by friendly ground units. Once you get back to platoons position you are free to recall yourself to base. If you drop outside the AO just recall yourself directly back to base.</li>
     </ul>
     <h2 id="communication_rules_of_engagement">Communication &amp; Rules of Engagement</h2>
     <ul>
@@ -182,7 +182,7 @@
     </ul>
     <p>An X inside the target lock for a plane or a ground asset marks a FRIENDLY unit.</p>
     <ul>
-        <li>When using laser locking it is recommended for the pilot to not use his own laser to ‘double lase’ the target, if the FAC has already done it. If the FAC can’t maintain a lock he will inform the pilot to switch to his own laser.
+        <li>When using laser locking it is recommended for the pilot to not use his own laser to ‘double lase' the target, if the FAC has already done it. If the FAC can't maintain a lock he will inform the pilot to switch to his own laser.
             <ul>
                 <li>Handing over targets by switching lasers will obviously result in loss of the lock and the intended payload might miss a moving target as a result. Talk to FAC and let him know what method you want to use to engage the target (your laser or his).</li>
             </ul></li>
@@ -190,7 +190,7 @@
     </ul>
     <h3 id="terms_the_pilot_and_fac_should_know">Terms the pilot and FAC should know</h3>
     <ul>
-        <li>Bugout -out of fuel or ordnance, must go back to base</li>
+        <li>Bugout - out of fuel or ordnance, must go back to base</li>
         <li>Spike - indicates radar warning receiver threat</li>
         <li>Bogey - unknown radar contact</li>
         <li>Bandit - aircraft identified as enemy</li>
@@ -207,25 +207,25 @@
     <h2 id="weapon_systems">Weapon Systems</h2>
     <p>The following weapon systems are working( at the moment of writing this document), and should be employed based on their type, range, and mode with which it acquires targets:</p>
     <ul>
-        <li><span style='color:#087b08'><strong>AGM-114N</strong></span> type: thermobaric, targeting: laser, range: UNK</li>
-        <li><span style='color:#087b08'><strong>AGM-114L</strong></span> type: HEAT, targeting: radar, range: 8km, notes: LOBL</li>
-        <li><span style='color:#087b08'><strong>AGM-114K</strong></span> type: HEAT, targeting: laser, range: 8km, notes: LOBL, less precise</li>
-        <li><span style='color:#087b08'><strong>AGM-65L</strong></span> type: HEAT, targeting: radar, range: 6km, notes: LOAL,only one of the 2 function</li>
-        <li><span style='color:#087b08'><strong>AGM-65G</strong></span> type: HEAT, targeting: ir, range: 4km, notes: target needs to be hot</li>
-        <li><span style='color:#087b08'><strong>GBU 12</strong></span> type: LGB, targeting: laser/unguided, range: UNK</li>
-        <li><span style='color:#087b08'><strong>GBU SDB</strong></span> type: PGGB, targeting: laser/ir/unguided, range: UNK</li>
-        <li><span style='color:#087b08'><strong>CBU-85</strong></span> type: cluster bomb, targeting: laser/unguided, range: UNK, notes: only for infantry</li>
-        <li><span style='color:#087b08'><strong>AGM-88C</strong></span> type: ARM,targeting: enemy radar, range: 25 km, notes: only for SPAAG</li>
-        <li><span style='color:#087b08'><strong>Hydra 70</strong></span> type: unguided rocket, targeting: HUD indicator, range: depends on the angle of attack, max 2km</li>
-        <li><span style='color:#087b08'><strong>AIM-120A</strong></span> type: fox3, targeting: radar lock, range: 10km</li>
-        <li><span style='color:#087b08'><strong>AMRAAM D</strong></span> type: fox3, targeting: radar lock, range: 12km</li>
-        <li><span style='color:#087b08'><strong>BIM-9X</strong></span>type: fox2, targeting: IR, range: 2km, notes: 4km range with active radar</li>
-        <li><span style='color:#087b08'><strong>AIM-132</strong></span> type: fox2, targeting: IR, range: 0.5km, notes: 5km range with active radar</li>
+        <li><span style="color:#087b08"><strong>AGM-114N</strong></span> type: thermobaric, targeting: laser, range: UNK</li>
+        <li><span style="color:#087b08"><strong>AGM-114L</strong></span> type: HEAT, targeting: radar, range: 8km, notes: LOBL</li>
+        <li><span style="color:#087b08"><strong>AGM-114K</strong></span> type: HEAT, targeting: laser, range: 8km, notes: LOBL, less precise</li>
+        <li><span style="color:#087b08"><strong>AGM-65L</strong></span> type: HEAT, targeting: radar, range: 6km, notes: LOAL,only one of the 2 function</li>
+        <li><span style="color:#087b08"><strong>AGM-65G</strong></span> type: HEAT, targeting: ir, range: 4km, notes: target needs to be hot</li>
+        <li><span style="color:#087b08"><strong>GBU 12</strong></span> type: LGB, targeting: laser/unguided, range: UNK</li>
+        <li><span style="color:#087b08"><strong>GBU SDB</strong></span> type: PGGB, targeting: laser/ir/unguided, range: UNK</li>
+        <li><span style="color:#087b08"><strong>CBU-85</strong></span> type: cluster bomb, targeting: laser/unguided, range: UNK, notes: only for infantry</li>
+        <li><span style="color:#087b08"><strong>AGM-88C</strong></span> type: ARM,targeting: enemy radar, range: 25 km, notes: only for SPAAG</li>
+        <li><span style="color:#087b08"><strong>Hydra 70</strong></span> type: unguided rocket, targeting: HUD indicator, range: depends on the angle of attack, max 2km</li>
+        <li><span style="color:#087b08"><strong>AIM-120A</strong></span> type: fox3, targeting: radar lock, range: 10km</li>
+        <li><span style="color:#087b08"><strong>AMRAAM D</strong></span> type: fox3, targeting: radar lock, range: 12km</li>
+        <li><span style="color:#087b08"><strong>BIM-9X</strong></span>type: fox2, targeting: IR, range: 2km, notes: 4km range with active radar</li>
+        <li><span style="color:#087b08"><strong>AIM-132</strong></span> type: fox2, targeting: IR, range: 0.5km, notes: 5km range with active radar</li>
     </ul>
     <hr />
     <p>ARM-anti radiation missile; LGB-laser guided bomb; PGGB-precision guided glide bomb</p>
     <ul>
-        <li>LOBL( lock on before launch) missiles needs the target info from the on board equipment and the targeting can be done only before firing.</li>
+        <li>LOBL( lock on before launch) missiles needs the target info from the onboard equipment and the targeting can be done only before firing.</li>
         <li>LOAL( lock on after launch) missiles can achieve a lock after they have left the aircraft, this can be done with the aid of radar or the internal guidance system.</li>
     </ul>
     <ul>
@@ -235,7 +235,7 @@
                     <ul>
                         <li>Intended loadout: 2x1 Hydra 70 (12 rockets); 2x2 CBU-85; 2x1 Fuel Tank; 2x1 GBU 12; 4x1 GBU SDB</li>
                     </ul></li>
-                <li>Focus on self defense and surgical removing of enemy armour, less impact on enemy soft targets.
+                <li>Focus on self-defense and surgical removing of enemy armour, less impact on enemy soft targets.
                     <ul>
                         <li>Intended loadout: 2x1 AMRAAM D; 2x1 AGM-65L; 2x1 AGM-65G; 2x1 GBU 12; 1x1 AGM-88C</li>
                     </ul></li>
