--- a/apps/legacy/src/app/views/pages/handbook/page/Getting_Started.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Getting_Started.hbs
@@ -7,7 +7,7 @@
         <li><strong style="color:#087b08">Interview</strong> - The applicant get invited to teamspeak to an Interview. This is mainly to get in contact and give further information and instructions.</li>
         <li><strong style="color:#087b08">Confirmation</strong> - Once the Interview is done we will confirm the applicant and officially invite him.</li>
         <li><strong style="color:#087b08">Preparation</strong> - The applicant will use the given details and instructions to download our modset.</li>
-        <li><strong style="color:#087b08">Mentoring</strong> - Once the applicant has a working modset he will be invited to a mentoring session. We will assess his knowledge and skills and bring him up to our standard individually or in small groups. That ensure a smooth transition into our group. Also it allows to individually teach people which allows us to take people with various different skill levels without teaching things they already know or teach them advanced things without them having the basics.</li>
+        <li><strong style="color:#087b08">Mentoring</strong> - Once the applicant has a working modset he will be invited to a mentoring session. We will assess his knowledge and skills and bring him up to our standard individually or in small groups. That ensure a smooth transition into our group. Also, it allows to individually teach people which allows us to take people with various different skill levels without teaching things they already know or teach them advanced things without them having the basics.</li>
     </ol>
 
     <hr>
@@ -20,7 +20,7 @@
 
     <hr>
     <h1>ACE 3 Mod</h1>
-    <p>ACE 3 is a mod that brings a lot of aspects to the game in regards of simulating reality. Generally if you are not familiar with it, it is recommended that you familiarise yourself with it before your first session. Note that we use a lot of customizations and enhancements.</p>
+    <p>ACE 3 is a mod that brings a lot of aspects to the game in regard to simulating reality. Generally if you are not familiar with it, it is recommended that you familiarise yourself with it before your first session. Note that we use a lot of customizations and enhancements.</p>
 
     <hr>
     <h1>ACRE Mod</h1>
