--- a/apps/legacy/src/app/views/pages/handbook/page/Qualifications.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Qualifications.hbs
@@ -99,7 +99,7 @@
         <li>Explosives
             <ul>
                 <li>Knowledge about common type Explosives</li>
-                <li>Explosive Ordnanace Disposal</li>
+                <li>Explosive Ordnance Disposal</li>
                 <li>Demolitions</li>
             </ul></li>
     </ul>
@@ -144,7 +144,7 @@
                 <li>Scouting</li>
                 <li>Safe, reliable, and timely Close Air Support</li>
                 <li>Operation and procedures of attack helicopters</li>
-                <li>Performing all of the above in day and night time conditions, under fire, and in difficult weather</li>
+                <li>Performing all of the above in day and nighttime conditions, under fire, and in difficult weather</li>
             </ul></li>
     </ul>
     <h2 id="copilot_rotary_aviation">Copilot Rotary Aviation</h2>
@@ -179,7 +179,7 @@
         <img src="/wiki/images/armoured.png" title="armoured.png" width="100" alt="armoured.png" style="float: right" /><figcaption aria-hidden="true">armoured.png</figcaption>
     </figure>
     <h2 id="armoured">Armoured</h2>
-    <p>Requirements: Infantryman Qualification, two crew man , leadership qualification is recommended but not mandatory.</p>
+    <p>Requirements: Infantryman Qualification, two crew man, leadership qualification is recommended but not mandatory.</p>
     <p>Can be done during an OP or scheduled Privately.</p>
     <p>Content:</p>
     <ul>
@@ -198,7 +198,7 @@
                     </ul></li>
                 <li>Knowledge about basic Tank Terminology
                     <ul>
-                        <li>Hulldown , Hide position , Jockeying etc.</li>
+                        <li>Hull down, Hide position, Jockeying etc.</li>
                     </ul></li>
                 <li>Knowing how to perform emergency repairs, how to perform regular repairs and where to get said repairs.</li>
                 <li>Knowing what Targets are a priority and which are not (Tank RoE).</li>
