--- a/apps/legacy/src/app/views/pages/handbook/page/Reconnaissance.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Reconnaissance.hbs
@@ -2,54 +2,54 @@
     <p><img src="/wiki/images/BFT_S1.png" title="BFT_S1.png" width="100" alt="BFT_S1.png" style="background-color: black" /> <img src="/wiki/images/ReconTeam.png" title="ReconTeam.png" width="250" alt="ReconTeam.png" /></p>
     <h2 id="reconnaissance_team">Reconnaissance Team</h2>
     <ul>
-        <li><span style='color:#087b08'><strong>Recon Spotter</strong></span> - Leader of the Recon Team and spotter for the Sniper. Equipped with a long-range Radio and responsible for the communication with other Elements.</li>
-        <li><span style='color:#087b08'><strong>Recon Sniper</strong></span> - Marksman of the Recon Team equipped with a long-range precision rifle.</li>
-        <li><span style='color:#087b08'><strong>Other Recon Roles</strong></span> - In some cases the Recon Team may get expanded and additional team members will be added to perform other roles.</li>
+        <li><span style="color:#087b08"><strong>Recon Spotter</strong></span> - Leader of the Recon Team and spotter for the Sniper. Equipped with a long-range Radio and responsible for the communication with other Elements.</li>
+        <li><span style="color:#087b08"><strong>Recon Sniper</strong></span> - Marksman of the Recon Team equipped with a long-range precision rifle.</li>
+        <li><span style="color:#087b08"><strong>Other Recon Roles</strong></span> - In some cases the Recon Team may get expanded and additional team members will be added to perform other roles.</li>
     </ul>
     <h2 id="tasks_responsibilities">Tasks &amp; Responsibilities</h2>
     <ul>
-        <li><span style='color:#087b08'><strong>Reconnaissance</strong></span> - The Recon Team usually is operating ahead of the other ground teams. Gathering as much intel about enemy position and movements as possbile prior to the arrival of the main ground force. Infiltrating behind enemy lines. They are the eyes and ears of the ground command based on which decisions are made.</li>
-        <li><span style='color:#087b08'><strong>Overwatch</strong></span> - Overwatching and cover the advance of ground teams while being on standby to eliminate threats.</li>
-        <li><span style='color:#087b08'><strong>Direct Target Elimination</strong></span> - Directly engaging high-value targets. Including high threats for other units e.g. AA-Launchers prior to arrival of Aviation Elements.</li>
-        <li><span style='color:#087b08'><strong>Indirect Target Elimination</strong></span> - Coordinating with other Support Elements e.g. Aviation and guide their efforts to engage and eliminate targets. Providing important information and guidance assisting with target acquisition and damage assessment.</li>
+        <li><span style="color:#087b08"><strong>Reconnaissance</strong></span> - The Recon Team usually is operating ahead of the other ground teams. Gathering as much intel about enemy position and movements as possible prior to the arrival of the main ground force. Infiltrating behind enemy lines. They are the eyes and ears of the ground command based on which decisions are made.</li>
+        <li><span style="color:#087b08"><strong>Overwatch</strong></span> - Overwatching and cover the advance of ground teams while being on standby to eliminate threats.</li>
+        <li><span style="color:#087b08"><strong>Direct Target Elimination</strong></span> - Directly engaging high-value targets. Including high threats for other units e.g. AA-Launchers prior to arrival of Aviation Elements.</li>
+        <li><span style="color:#087b08"><strong>Indirect Target Elimination</strong></span> - Coordinating with other Support Elements e.g. Aviation and guide their efforts to engage and eliminate targets. Providing important information and guidance assisting with target acquisition and damage assessment.</li>
     </ul>
     <h2 id="guidelines">Guidelines</h2>
     <ul>
-        <li><span style='color:#087b08'><strong>Stealth</strong></span> - Stealth is key. The Recon Team should operate without getting detected. Avoiding enemy contacts in order to proceed further behind enemy lines. This may require even total silence of the team members.
+        <li><span style="color:#087b08"><strong>Stealth</strong></span> - Stealth is key. The Recon Team should operate without getting detected. Avoiding enemy contacts in order to proceed further behind enemy lines. This may require even total silence of the team members.
             <ul>
                 <li>Avoid skylining, always have a background where you blend in.</li>
                 <li>Avoid hasty movements. Moving individuals are easier to spot, especially when moving fast.</li>
                 <li>After an engagement relocate yourself.</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>Communication</strong></span> - Gathered information need to be efficiently communicated to other Elements. This is being executed by utilizing both markers and short audio messages.</li>
-        <li><span style='color:#087b08'><strong>Precision</strong></span> - When cleared to engage a target precision is key. Other than self-defence mission specific ROE will handle how and when to engage.</li>
-        <li><span style='color:#087b08'><strong>Survival</strong></span> - Due to operating behind enemy lines the Recon Team will most likely not receive any direct support by other units. Therefor they need to break contact whenever there is a threat of them being stuck. Transition between slow pace stealth movements and quickly breaking contact is required.</li>
+        <li><span style="color:#087b08"><strong>Communication</strong></span> - Gathered information need to be efficiently communicated to other Elements. This is being executed by utilizing both markers and short audio messages.</li>
+        <li><span style="color:#087b08"><strong>Precision</strong></span> - When cleared to engage a target precision is key. Other than self-defence mission specific ROE will handle how and when to engage.</li>
+        <li><span style="color:#087b08"><strong>Survival</strong></span> - Due to operating behind enemy lines the Recon Team will most likely not receive any direct support by other units. Therefor they need to break contact whenever there is a threat of them being stuck. Transition between slow pace stealth movements and quickly breaking contact is required.</li>
     </ul>
     <h2 id="sniper_weapon_switching">Sniper Weapon Switching</h2>
-    <p>The Recon Sniper may carries two primary weapons. A Personal Defence Weapon (PDW) and a Sniper Rifle.</p>
+    <p>The Recon Sniper may carry two primary weapons. A Personal Defence Weapon (PDW) and a Sniper Rifle.</p>
     <ul>
-        <li><span style='color:#087b08'><strong>Gun Back</strong></span> - The Sniper Rifle is on default loaded into his Gun Back (Backpack). He is carrying his PDW.</li>
-        <li><span style='color:#087b08'><strong>Switching Weapons</strong></span> - Place the PDW into your inventory. Use ACE Self-Interaction to take the Sniper Rifle out of your Gun Back. When done, place the Sniper Rifle in your Gun Back with ACE Self-Interaction and take the PDW out of your inventory. It is not possible to switch a weapon your carry directly with the weapon in the Gun Back.</li>
+        <li><span style="color:#087b08"><strong>Gun Back</strong></span> - The Sniper Rifle is on default loaded into his Gun Back (Backpack). He is carrying his PDW.</li>
+        <li><span style="color:#087b08"><strong>Switching Weapons</strong></span> - Place the PDW into your inventory. Use ACE Self-Interaction to take the Sniper Rifle out of your Gun Back. When done, place the Sniper Rifle in your Gun Back with ACE Self-Interaction and take the PDW out of your inventory. It is not possible to switch a weapon your carry directly with the weapon in the Gun Back.</li>
     </ul>
     <h2 id="marksmanship">Marksmanship</h2>
     <p>Accuracy is vital when engaging targets, especially at range. When breaking stealth to engage a target, it should be precise and quick. Sniper and Spotter need to work together in order to produce accurate shots.</p>
     <h3 id="influencing_factors">Influencing Factors:</h3>
     <ul>
-        <li><span style='color:#087b08'><strong>Temperature &amp; Humidity</strong></span> - Lower Temperatures cause more drag due to higher air density slowing down the bullet. High Humidity is reducing the drag.</li>
-        <li><span style='color:#087b08'><strong>Barometric Pressure</strong></span> - Describes the density of air. Higher Pressure results in more drag.</li>
-        <li><span style='color:#087b08'><strong>Range</strong></span> - Direct distance to Target.</li>
-        <li><span style='color:#087b08'><strong>Direct wind</strong></span> - Headwinds and Tailwinds.
+        <li><span style="color:#087b08"><strong>Temperature &amp; Humidity</strong></span> - Lower Temperatures cause more drag due to higher air density slowing down the bullet. High Humidity is reducing the drag.</li>
+        <li><span style="color:#087b08"><strong>Barometric Pressure</strong></span> - Describes the density of air. Higher Pressure results in more drag.</li>
+        <li><span style="color:#087b08"><strong>Range</strong></span> - Direct distance to Target.</li>
+        <li><span style="color:#087b08"><strong>Direct wind</strong></span> - Headwinds and Tailwinds.
             <ul>
                 <li>Headwinds: Bullet gets slowed down which increases drop.</li>
                 <li>Tailwinds: Bullet gets carried by the wind and arrives quicker, therefor less drop.</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>Crosswind</strong></span> - Deviates the bullet to the side.</li>
+        <li><span style="color:#087b08"><strong>Crosswind</strong></span> - Deviates the bullet to the side.</li>
     </ul>
     <h3 id="calculations_scope_adjustments">Calculations &amp; Scope Adjustments</h3>
     <p>In order to make adjustments you first need to get the required parameters.</p>
     <ul>
-        <li><span style='color:#087b08'><strong>Vector 21</strong></span> - Used to get the direct distance to target (<a href="https://ace3mod.com/wiki/feature/vector.html">more</a>)</li>
-        <li><span style='color:#087b08'><strong>Kestrel 4500</strong></span> - Weather &amp; Environment Meter.</li>
+        <li><span style="color:#087b08"><strong>Vector 21</strong></span> - Used to get the direct distance to target (<a href="https://ace3mod.com/wiki/feature/vector.html">more</a>)</li>
+        <li><span style="color:#087b08"><strong>Kestrel 4500</strong></span> - Weather &amp; Environment Meter.</li>
     </ul>
     <figure>
         <img src="/wiki/images/Kestrel4500.png" title="Kestrel4500.png" width="250" alt="Kestrel4500.png" /><figcaption aria-hidden="true">Kestrel4500.png</figcaption>
@@ -72,11 +72,11 @@
                         </ul></li>
                     <li>Headwind / Tailwind
                         <ul>
-                            <li>When using Crosswind function point the Kestrel at the target. Read of the wind towards target direction. If the wind is coming from a direction behind you it is Tailwind, when it comes from the front it is Headwind.</li>
+                            <li>When using Crosswind function point the Kestrel at the target. Read of the wind towards target direction. If the wind is coming from a direction behind you, it is Tailwind, when it comes from the front it is Headwind.</li>
                         </ul></li>
                 </ul></li>
         </ul></li>
-        <li><span style='color:#087b08'><strong>Range card</strong></span> - Lists of Bullet Drop at certain ranges. Furthermore it lists Crosswind Adjustments and Target Lead Adjustments.
+        <li><span style="color:#087b08"><strong>Range card</strong></span> - Lists of Bullet Drop at certain ranges. Furthermore, it lists Crosswind Adjustments and Target Lead Adjustments.
             <ul>
                 <li>Use all previously gained data to read the appropriate values out of the Range card.</li>
                 <li>Recommended is to start with the vertical adjustment (range).</li>
