--- a/apps/legacy/src/app/views/pages/handbook/page/Regulations.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Regulations.hbs
@@ -12,19 +12,19 @@
         <tr class="even">
             <td><p>Class 1</p></td>
             <td><p>Standard optic with no magnification</p></td>
-            <td><p><span style='color:#6cdd23'>Green</span></p></td>
+            <td><p><span style="color:#6cdd23">Green</span></p></td>
             <td><p>None</p></td>
         </tr>
         <tr class="odd">
             <td><p>Class 2</p></td>
             <td><p>Magnified optic (3.4x - 4x)</p></td>
-            <td><p><span style='color:#dd9323'>Orange</span></p></td>
+            <td><p><span style="color:#dd9323">Orange</span></p></td>
             <td><p>1 per Element + Platoon Sergeant</p></td>
         </tr>
         <tr class="even">
             <td><p>Class 3</p></td>
-            <td><p>Higly magnified optic</p></td>
-            <td><p><span style='color:#dd2423'>Red</span></p></td>
+            <td><p>Highly magnified optic</p></td>
+            <td><p><span style="color:#dd2423">Red</span></p></td>
             <td><p>Platoon DMR only</p></td>
         </tr>
         <tr class="odd">
@@ -36,9 +36,9 @@
         </tbody>
     </table>
     <ul>
-        <li><span style='color:#087b08'><strong>Class 1 Sight</strong></span> - Anyone can choose his Class 1 sight.</li>
-        <li><span style='color:#087b08'><strong>Element Sight Upgrade</strong></span> - Each Element (Squad, Platoon Element) can upgrade one soldier with a Class 2 sights.</li>
-        <li><span style='color:#087b08'><strong>Sight Upgrade Restriction</strong></span> - Following roles are restricted to Class 1 sights and cannot upgrade:
+        <li><span style="color:#087b08"><strong>Class 1 Sight</strong></span> - Anyone can choose his Class 1 sight.</li>
+        <li><span style="color:#087b08"><strong>Element Sight Upgrade</strong></span> - Each Element (Squad, Platoon Element) can upgrade one soldier with a Class 2 sights.</li>
+        <li><span style="color:#087b08"><strong>Sight Upgrade Restriction</strong></span> - Following roles are restricted to Class 1 sights and cannot upgrade:
             <ul>
                 <li>Platoon Leader</li>
                 <li>Platoon Medic</li>
@@ -53,13 +53,13 @@
                 <li>Heavy AT Gunner</li>
                 <li>Mortar Gunner</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>Platoon Element Sights</strong></span> - The Platoon Sergeant and one additional Member can upgrade to a Class 2 Sight. A Platoon DMR counts as a upgrade.</li>
+        <li><span style="color:#087b08"><strong>Platoon Element Sights</strong></span> - The Platoon Sergeant and one additional Member can upgrade to a Class 2 Sight. A Platoon DMR counts as an upgrade.</li>
     </ul>
     <h2 id="at_weapons">AT-Weapons</h2>
     <ul>
-        <li><span style='color:#087b08'><strong>AT Limit</strong></span> - Each Squad can carry up to three AT-Weapons.</li>
-        <li><span style='color:#087b08'><strong>MAT/HAT Multiplier</strong></span> - The presence of a MAT/HAT in an element counts as two AT-Weapons.</li>
-        <li><span style='color:#087b08'><strong>Restriction</strong></span> - Following roles cannot carry AT-Weapons:
+        <li><span style="color:#087b08"><strong>AT Limit</strong></span> - Each Squad can carry up to three AT-Weapons.</li>
+        <li><span style="color:#087b08"><strong>MAT/HAT Multiplier</strong></span> - The presence of a MAT/HAT in an element counts as two AT-Weapons.</li>
+        <li><span style="color:#087b08"><strong>Restriction</strong></span> - Following roles cannot carry AT-Weapons:
             <ul>
                 <li>Autorifleman</li>
                 <li>Medium Machine Gunner</li>
@@ -69,19 +69,19 @@
     </ul>
     <h2 id="additional_ammunition">Additional Ammunition</h2>
     <ul>
-        <li><span style='color:#087b08'><strong>Additional Ammunition</strong></span> - Each soldier can carry additional ammunition for the AR, MMG and MAT after permission by his leader:
+        <li><span style="color:#087b08"><strong>Additional Ammunition</strong></span> - Each soldier can carry additional ammunition for the AR, MMG and MAT after permission by his leader:
             <ul>
-                <li>200 Rnds of Machine Gun Ammunition (AR or MMG)</li>
+                <li>200 rounds of Machine Gun Ammunition (AR or MMG)</li>
                 <li>1x MAT Rocket</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>Restriction</strong></span> - No soldier who has the abovementioned ammunition in his loadout is allowed to carry additional ammunition.</li>
+        <li><span style="color:#087b08"><strong>Restriction</strong></span> - No soldier who has the aforementioned ammunition in his loadout is allowed to carry additional ammunition.</li>
     </ul>
     <h2 id="special_gear">Special Gear</h2>
     <ul>
-        <li><span style='color:#087b08'><strong>Lockpicks</strong></span> - One member in the Squad can carry Lockpicks (preferably the Medic).</li>
-        <li><span style='color:#087b08'><strong>Entrenching Tool</strong></span> - Each Element can carry two Entrenching Tools (Leader and Medic are not permitted to carry an Entrenching Tool).</li>
-        <li><span style='color:#087b08'><strong>Laserdesignator</strong></span> - The Platoon Element may carry one Laserdesignator.</li>
-        <li><span style='color:#087b08'><strong>AN/PRC-152</strong></span> - Each Fire Team Leader may carry an AN/PRC-152 (at least the 2nd in Command has to, 3rd in Command may carry one turned off until needed).</li>
-        <li><span style='color:#087b08'><strong>Special Mission Gear</strong></span> - Special Mission Gear (e.g. Laptop) is being distributed by the Platoon Leader, the restrictions from the additional ammunition section apply.</li>
+        <li><span style="color:#087b08"><strong>Lockpicks</strong></span> - One member in the Squad can carry lockpicks (preferably the Medic).</li>
+        <li><span style="color:#087b08"><strong>Entrenching Tool</strong></span> - Each Element can carry two Entrenching Tools (Leader and Medic are not permitted to carry an Entrenching Tool).</li>
+        <li><span style="color:#087b08"><strong>Laser designator</strong></span> - The Platoon Element may carry one laser designator.</li>
+        <li><span style="color:#087b08"><strong>AN/PRC-152</strong></span> - Each Fire Team Leader may carry an AN/PRC-152 (at least the 2nd in Command has to, 3rd in Command may carry one turned off until needed).</li>
+        <li><span style="color:#087b08"><strong>Special Mission Gear</strong></span> - Special Mission Gear (e.g. Laptop) is being distributed by the Platoon Leader, the restrictions from the additional ammunition section apply.</li>
     </ul>
 </div>
