--- a/apps/legacy/src/app/views/pages/handbook/page/Debrief.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Debrief.hbs
@@ -3,21 +3,21 @@
     <p>Why debrief? The goal is to improve quality and performance of the whole unit, and to stop bad practices from happening again in the future.</p>
     <h2 id="general_guidelines">General Guidelines</h2>
     <ul>
-        <li><span style='color:#087b08'><strong>Keep the goal in mind.</strong></span> The debrief should help improve the unit’s as well as the individual’s performance.</li>
-        <li><span style='color:#087b08'><strong>Be fair.</strong></span> Do not complain about the performance of other leaders, especially not in their absence (during the squad debrief). You may address issues you had in a constructive manner in the platoon debrief.</li>
-        <li><span style='color:#087b08'><strong>Do not accuse, do not judge, do not single someone out.</strong></span> This leads to people becoming defensive and thus is not expedient. Address issues you have with other people in a way that you give them the chance to address them themselves first, and if they don’t then talk about it in a constructive manner. Keep in mind that others made decisions based on information they had at that time, which might differ from what you knew.</li>
-        <li><span style='color:#087b08'><strong>Keep it brief.</strong></span> Stay on point and make sure the conversation does not drift. Do not hold monologues. Do not lose the point of the discussion by arguing about specifics of a certain situation. The debrief should be as short and on point as possible.</li>
+        <li><span style="color:#087b08"><strong>Keep the goal in mind.</strong></span> The debrief should help improve the unit's as well as the individual's performance.</li>
+        <li><span style="color:#087b08"><strong>Be fair.</strong></span> Do not complain about the performance of other leaders, especially not in their absence (during the squad debrief). You may address issues you had in a constructive manner in the platoon debrief.</li>
+        <li><span style="color:#087b08"><strong>Do not accuse, do not judge, do not single someone out.</strong></span> This leads to people becoming defensive and thus is not expedient. Address issues you have with other people in a way that you give them the chance to address them themselves first, and if they don't then talk about it in a constructive manner. Keep in mind that others made decisions based on information they had at that time, which might differ from what you knew.</li>
+        <li><span style="color:#087b08"><strong>Keep it brief.</strong></span> Stay on point and make sure the conversation does not drift. Do not hold monologues. Do not lose the point of the discussion by arguing about specifics of a certain situation. The debrief should be as short and on point as possible.</li>
     </ul>
     <h2 id="schedule">Schedule</h2>
     <ol>
-        <li><span style='color:#087b08'><strong>Element debriefs.</strong></span> The individual elements split up to hold the squad internal debriefs. This should not take longer than 5 minutes.
+        <li><span style="color:#087b08"><strong>Element debriefs.</strong></span> The individual elements split up to hold the squad internal debriefs. This should not take longer than 5 minutes.
             <ol>
                 <li><strong>Team internal feedback.</strong> SLs should first ask the Teams (Red, Green, …) for individual feedback for each other. They should have observed their Team members during the ops and noticed any bad practices. Go through all teams first. Ideally you use most time of the squad debrief for this step. If teams drift off the SL should intervene.</li>
                 <li><strong>Open discussion.</strong> SLs can point out errors that were not addressed in the previous point and should ask if anyone noticed any important mistakes. Nobody should feel pressured into saying something just for the sake of it - if there is nothing to say or everything has been said already, move on.</li>
-                <li><strong>Feedback for the SL</strong>. The SL asks for feedback on their personal performance as a SL. Make sure not to go to much into details, keep it brief.</li>
+                <li><strong>Feedback for the SL.</strong> The SL asks for feedback on their personal performance as an SL. Make sure not to go too much into details, keep it brief.</li>
             </ol></li>
-        <li><span style='color:#087b08'><strong>Announcements.</strong></span> Everyone joins together. Officers / NCOs inform about current announcements.</li>
-        <li><span style='color:#087b08'><strong>Platoon debrief.</strong></span> The PL moderates the debrief. The Platoon Debrief should not recap everything that has happened.
+        <li><span style="color:#087b08"><strong>Announcements.</strong></span> Everyone joins together. Officers / NCOs inform about current announcements.</li>
+        <li><span style="color:#087b08"><strong>Platoon debrief.</strong></span> The PL moderates the debrief. The Platoon Debrief should not recap everything that has happened.
             <ol>
                 <li><strong>Open discussion.</strong> The PL asks if there was anything going majorly wrong in the ops and guides the discussion to focus on only the single most important issue.
                     <ul>
@@ -32,7 +32,7 @@
                 <li><strong>Feedback for the mission maker.</strong></li>
                 <li><strong>End of Platoon meeting.</strong> People who were not in any leading position are dismissed at this point (they may stay however if they wish). The leadership elements will continue debriefing after a 5 minutes break.</li>
             </ol></li>
-        <li><span style='color:#087b08'><strong>Leaders debrief.</strong></span> After the 5 minutes the leadership personnel (PL, SLs, 2ic, leaders of additional elements) and any interested other people debrief about the OP on a tactical and command level.
+        <li><span style="color:#087b08"><strong>Leaders debrief.</strong></span> After the 5 minutes the leadership personnel (PL, SLs, 2ic, leaders of additional elements) and any interested other people debrief about the OP on a tactical and command level.
             <ul>
                 <li>The discussion happens as an open discussion, PL will not moderate. In fact, the command hierarchy is dissolved at this point.</li>
                 <li>Make sure you give constructive feedback, treating everyone with respect and giving them the benefit of the doubt. Often people made decisions that may look stupid from your point of view but were well justified given the information they had at the situation they were in.</li>
