--- a/apps/legacy/src/app/views/pages/handbook/page/Echo_Platoon_Support.hbs
+++ b/apps/legacy/src/app/views/pages/handbook/page/Echo_Platoon_Support.hbs
@@ -4,7 +4,7 @@
     <p>Echo is embedded in the Main Platoon. Their main tasks include covering regular elements, protect flanks and provide effective fire support.</p>
     <h2 id="composition">Composition</h2>
     <ul>
-        <li><span style='color:#087b08'><strong>Combat Engineer</strong></span> - Echo Team Leader and trained Engineer. Proficient in following fields of work:
+        <li><span style="color:#087b08"><strong>Combat Engineer</strong></span> - Echo Team Leader and trained Engineer. Proficient in following fields of work:
             <ul>
                 <li>Fortification of Positions (digging Trenches)</li>
                 <li>Repairing Vehicles</li>
@@ -13,7 +13,7 @@
             </ul></li>
     </ul>
     <ul>
-        <li><span style='color:#087b08'><strong>Weapons Specialist</strong></span> - Operator of Echo's Heavy Weapon which include:
+        <li><span style="color:#087b08"><strong>Weapons Specialist</strong></span> - Operator of Echo's Heavy Weapon which include:
             <ul>
                 <li>Medium Machine Guns (MMG)</li>
                 <li>Medium Anti-Tank Launchers (MAT)</li>
@@ -22,7 +22,7 @@
             </ul></li>
     </ul>
     <ul>
-        <li><span style='color:#087b08'><strong>Assistant Weapons Specialist</strong></span> - Assisting the Weapons Specialist to deploy his weapons in the most effective way.
+        <li><span style="color:#087b08"><strong>Assistant Weapons Specialist</strong></span> - Assisting the Weapons Specialist to deploy his weapons in the most effective way.
             <ul>
                 <li>Assist with Rangefinder</li>
                 <li>Carries Ammunition</li>
@@ -32,17 +32,17 @@
     </ul>
     <h2 id="combat_engineer_proficiency">Combat Engineer Proficiency</h2>
     <h3 id="engineer_skills">Engineer Skills</h3>
-    <p>Skills a Combat Engineer need to able to bring onto the battlefield.</p>
+    <p>Skills a Combat Engineer needs to be able to bring onto the battlefield.</p>
     <ul>
-        <li><span style='color:#087b08'><strong>Entrenching</strong></span> - Equipped with an Entrenching Tool the Combat Engineer can dig trenches. Used over ACE Self-Interaction he can either dig a small or a big trench. These can be positioned freely, although they require a ground which is able of being moved like sand or grass, it does not work on concrete and such. The Entrenching Tool allows to continue constructing unfinished Fortifications.</li>
-        <li><span style='color:#087b08'><strong>Fortification</strong></span> - Equipped with an Entrenching Tool and Construction Tool the Combat Engineer can construct Fortifications as long as there are available resources. Used over ACE Self-Interaction he can construct Fortifications. Each Fortification will cost resources depending on their complexity. Possible Fortifications small bunkers, various sandbag walls, tank traps and razor wire.
+        <li><span style="color:#087b08"><strong>Entrenching</strong></span> - Equipped with an Entrenching Tool the Combat Engineer can dig trenches. Used over ACE Self-Interaction he can either dig a small or a big trench. These can be positioned freely, although they require a ground which is able of being moved like sand or grass, it does not work on concrete and such. The Entrenching Tool allows to continue constructing unfinished Fortifications.</li>
+        <li><span style="color:#087b08"><strong>Fortification</strong></span> - Equipped with an Entrenching Tool and Construction Tool the Combat Engineer can construct Fortifications as long as there are available resources. Used over ACE Self-Interaction he can construct Fortifications. Each Fortification will cost resources depending on their complexity. Possible Fortifications small bunkers, various sandbag walls, tank traps and razor wire.
             <ul>
                 <li>Construction Resources can also be requested by supply drop.</li>
                 <li>Fortifications can be positioned freely, they do not require soft ground.</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>Repairing Vehicles</strong></span> - Unless you just switch tires, Repairing requires a Tool Kit. These can be usually found inside of the vehicles. Repairing is done by interacting with the Vehicle with ACE Interaction.</li>
-        <li><span style='color:#087b08'><strong>Deployment of Explosives</strong></span> - Explosives are placed by using ACE Self-Interaction. Often Explosives require arming after placing which is being done by ACE Interaction with the Explosive. The Combat Engineer is carry manual tickers (Clacker).</li>
-        <li><span style='color:#087b08'><strong>Disposal of Explosives</strong></span> - Depending of the type of Explosive you face, there are different requirements. Generally it follows a certain procedure.
+        <li><span style="color:#087b08"><strong>Repairing Vehicles</strong></span> - Unless you just switch tires, Repairing requires a Tool Kit. These can be usually found inside the vehicles. Repairing is done by interacting with the Vehicle with ACE Interaction.</li>
+        <li><span style="color:#087b08"><strong>Deployment of Explosives</strong></span> - Explosives are placed by using ACE Self-Interaction. Often Explosives require arming after placing which is being done by ACE Interaction with the Explosive. The Combat Engineer is carry manual tickers (Clacker).</li>
+        <li><span style="color:#087b08"><strong>Disposal of Explosives</strong></span> - Depending on the type of Explosive you face, there are different requirements. Generally it follows a certain procedure.
             <ul>
                 <li>Locate - Use the Mine Detector to assist.</li>
                 <li>Approach - Carefully crawl towards the Explosives, especially if you can suspect a trigger like a pressure plate and such.</li>
@@ -95,31 +95,31 @@
         </tbody>
     </table>
     <ul>
-        <li><span style='color:#087b08'><strong>APERS Mine</strong></span> - Classic pressure activated anti-personnel mine.</li>
-        <li><span style='color:#087b08'><strong>APERS Bounding Mine</strong></span> - Pressure activated anti-personnel mine (Bouncing Betty). Initial charge propells the main charge into the air which will explode mid air above ground spreading shrapnel over a large area.</li>
-        <li><span style='color:#087b08'><strong>APERS Tripwire Mine</strong></span> - Classic anti-personnel mine activated by a tripwire.</li>
-        <li><span style='color:#087b08'><strong>AT Mine</strong></span> - Anti vehicle / tank mine activated by pressure. It will not be activated by infantry stepping on it.</li>
-        <li><span style='color:#087b08'><strong>IED</strong></span> - Either pressure or remotely activated. Usually based on a artillery shell. Highly effective with a large explosion radius. Effective against vehicles and personnel.</li>
-        <li><span style='color:#087b08'><strong>Claymore</strong></span> - Directional anti-personnel mine. Usually remotely activated.</li>
-        <li><span style='color:#087b08'><strong>SLAM</strong></span> - Directional anti vehicle / tank mine. Either activated by pressure in bottom attack mode, laser in side attack mode or remotely activated.</li>
-        <li><span style='color:#087b08'><strong>Explosive Charge</strong></span> - Explosive charge activated either by timer or remotely.</li>
-        <li><span style='color:#087b08'><strong>Explosive Satchel</strong></span> - Large explosive charge activated either by timer or remotely.</li>
+        <li><span style="color:#087b08"><strong>APERS Mine</strong></span> - Classic pressure activated anti-personnel mine.</li>
+        <li><span style="color:#087b08"><strong>APERS Bounding Mine</strong></span> - Pressure activated anti-personnel mine (Bouncing Betty). Initial charge propels the main charge into the air which will explode midair above ground spreading shrapnel over a large area.</li>
+        <li><span style="color:#087b08"><strong>APERS Tripwire Mine</strong></span> - Classic anti-personnel mine activated by a tripwire.</li>
+        <li><span style="color:#087b08"><strong>AT Mine</strong></span> - Anti vehicle / tank mine activated by pressure. It will not be activated by infantry stepping on it.</li>
+        <li><span style="color:#087b08"><strong>IED</strong></span> - Either pressure or remotely activated. Usually based on an artillery shell. Highly effective with a large explosion radius. Effective against vehicles and personnel.</li>
+        <li><span style="color:#087b08"><strong>Claymore</strong></span> - Directional anti-personnel mine. Usually remotely activated.</li>
+        <li><span style="color:#087b08"><strong>SLAM</strong></span> - Directional anti vehicle / tank mine. Either activated by pressure in bottom attack mode, laser in side attack mode or remotely activated.</li>
+        <li><span style="color:#087b08"><strong>Explosive Charge</strong></span> - Explosive charge activated either by timer or remotely.</li>
+        <li><span style="color:#087b08"><strong>Explosive Satchel</strong></span> - Large explosive charge activated either by timer or remotely.</li>
     </ul>
     <h2 id="heavy_weapon_proficiency">Heavy Weapon Proficiency</h2>
     <p>Some things like how to operate Rocket Launchers (MAT/HAT) can be found in <a href="/handbook/Basic_Infantry_Skills">Section 4 Basic Infantry Skills</a>.</p>
     <h3 id="mortar">Mortar</h3>
-    <p>The heaviest weapon deployed by Echo is a Mortar. The Communication in regards of Fire Support Request can be found in <a href="/handbook/Communication">Section 3 Communication</a>. Further more you need to proficient with Map Tools, details can be found in <a href="/handbook/Basic_Infantry_Skills">Section 4 Basic Infantry Skills</a>.</p>
+    <p>The heaviest weapon deployed by Echo is a Mortar. The Communication in regard to Fire Support Request can be found in <a href="/handbook/Communication">Section 3 Communication</a>. Furthermore, you need to proficient with Map Tools, details can be found in <a href="/handbook/Basic_Infantry_Skills">Section 4 Basic Infantry Skills</a>.</p>
     <h4 id="general">General</h4>
     <ul>
-        <li><span style='color:#087b08'><strong>Required Tools</strong></span> - Following Tools are required for effective mortar deployment and usage:
+        <li><span style="color:#087b08"><strong>Required Tools</strong></span> - Following Tools are required for effective mortar deployment and usage:
             <ul>
                 <li>Map Tools - Direction and Distance.</li>
                 <li>82mm Rangecard - Proving Ballistic Information.</li>
                 <li>Pen &amp; Paper - You eventually need to make some nodes and calculations.</li>
                 <li>Clock - Not required, but handy.</li>
             </ul></li>
-        <li><span style='color:#087b08'><strong>Assemble Mortar</strong></span> - The Mortar is usually stored in two Backpacks. Both need to be placed and assembled.</li>
-        <li><span style='color:#087b08'><strong>Ammunition</strong></span> - The Mortar must be manually reloaded with ACE Interaction. Ammunition is stored in box which can be carried. There are three types of Ammunition available:
+        <li><span style="color:#087b08"><strong>Assemble Mortar</strong></span> - The Mortar is usually stored in two Backpacks. Both need to be placed and assembled.</li>
+        <li><span style="color:#087b08"><strong>Ammunition</strong></span> - The Mortar must be manually reloaded with ACE Interaction. Ammunition is stored in box which can be carried. There are three types of Ammunition available:
             <ul>
                 <li>HE</li>
                 <li>Smoke</li>
@@ -127,21 +127,21 @@
             </ul></li>
     </ul>
     <h4 id="firing_solution">Firing Solution</h4>
-    <p>Assuming you received a Target or you just prepare for potential Targets during down times. You need to go through following steps:</p>
-    <p><span style='color:#087b08'><strong>Step 1: Collect Target Information</strong></span></p>
+    <p>Assuming you received a Target or you just prepare for potential Targets during downtimes. You need to go through following steps:</p>
+    <p><span style="color:#087b08"><strong>Step 1: Collect Target Information</strong></span></p>
     <ul>
         <li>Find your exact location on the Map.</li>
         <li>Find the target location on the Map.</li>
         <li>Use Map Tools and get the direction (in Mils) and distance in meters.</li>
-        <li>Get the Height Difference between your location and the target location and whether the target is above or below in height.</li>
+        <li>Get the Height Difference between your location and the target location and whether the target is above or below you in height.</li>
     </ul>
-    <p><span style='color:#087b08'><strong>Step 2: Chose appropriate Charge</strong></span></p>
+    <p><span style="color:#087b08"><strong>Step 2: Chose appropriate Charge</strong></span></p>
     <ul>
         <li>Charge is influencing the amount of explosive force used to propel the Mortar Round.</li>
         <li>Influences the Arc and with it the travel time.</li>
         <li>Use the lowest Charge possible for the given distance.</li>
     </ul>
-    <p><span style='color:#087b08'><strong>Step 3: Collect &amp; Calculate</strong></span></p>
+    <p><span style="color:#087b08"><strong>Step 3: Collect &amp; Calculate</strong></span></p>
     <p>Use the 82mm Rangecard and acquire all relevant information. Giving the distance to the target and charge you need to acquire following information:</p>
     <ul>
         <li>Elevation
@@ -151,7 +151,7 @@
         <li>Elevation adjustment for 100m Height Difference
             <ul>
                 <li>Scales linear e.g. 50m Height Difference means half of the adjustment value needed</li>
-                <li>If Target is above in Height add the value to Elevation, else subtract</li>
+                <li>If Target is above you in height, add the value to Elevation, else subtract</li>
             </ul></li>
         <li>Time of Flight
             <ul>
@@ -161,7 +161,7 @@
     <figure>
         <img src="/wiki/images/MortarCard.png" title="MortarCard.png" width="300" alt="MortarCard.png" /><figcaption aria-hidden="true">MortarCard.png</figcaption>
     </figure>
-    <p><span style='color:#087b08'><strong>Step 4: Aim &amp; Fire</strong></span></p>
+    <p><span style="color:#087b08"><strong>Step 4: Aim &amp; Fire</strong></span></p>
     <p>Set Charge, Elevation (in Mils) and Direction (in Mils) to align your Mortar with the Target and Fire. Communicate your status to the other units:</p>
     <ul>
         <li>Rounds Away - First Round fired at Target.</li>
@@ -171,18 +171,18 @@
     <figure>
         <img src="/wiki/images/MortarOptic.png" title="MortarOptic.png" width="300" alt="MortarOptic.png" /><figcaption aria-hidden="true">MortarOptic.png</figcaption>
     </figure>
-    <p><span style='color:#087b08'><strong>Step 5: Evaluate &amp; Adjust</strong></span></p>
+    <p><span style="color:#087b08"><strong>Step 5: Evaluate &amp; Adjust</strong></span></p>
     <p>Depending on Reports of your effectiveness on the Target you might need adjust and being called to fire again.</p>
     <h2 id="motorizedmechanized">Motorized/Mechanized</h2>
-    <p>Echo might operate with a Vehicle. Usually in order to assist with transporting equipment or enhancing fire power due to vehicle weaponry. This section will be about on how to utilize and deploy a vehicle like a HUMMWV.</p>
+    <p>Echo might operate with a Vehicle. Usually in order to assist with transporting equipment or enhancing firepower due to vehicle weaponry. This section will be about on how to utilize and deploy a vehicle like a HUMMWV.</p>
     <ul>
-        <li><span style='color:#087b08'><strong>Vehicle Roles</strong></span> - Depending on the Vehicle the roles may switch. For a HMMWV with an M2 Machine Gun the Weapon Specialist should not be the Gunner of the M2 perse. Him being a passenger allows him to deploy his MMG (for example) while his Asst. Weapon Specialist is able to operate the mounted M2. The Combat Engineer is driving the HMMWV. The Weapon Specialist is sitting in the backseat behind the driver.</li>
+        <li><span style="color:#087b08"><strong>Vehicle Roles</strong></span> - Depending on the Vehicle the roles may switch. For a HMMWV with an M2 Machine Gun the Weapon Specialist should not be the Gunner of the M2 per se. Him being a passenger allows him to deploy his MMG (for example) while his Asst. Weapon Specialist is able to operate the mounted M2. The Combat Engineer is driving the HMMWV. The Weapon Specialist is sitting in the backseat behind the driver.</li>
     </ul>
     <figure>
         <img src="/wiki/images/HMMWV_Hold.png" title="HMMWV_Hold.png" width="500" alt="HMMWV_Hold.png" /><figcaption aria-hidden="true">HMMWV_Hold.png</figcaption>
     </figure>
     <ul>
-        <li><span style='color:#087b08'><strong>Holding Vehicle</strong></span> - Hold the vehicle angled on the center of the road. That provides a lot of cover, assuming the contact is coming from the front. It should be angled to provide a maximum of cover, while being able to move forward or go in reverse without switching between them.</li>
+        <li><span style="color:#087b08"><strong>Holding Vehicle</strong></span> - Hold the vehicle angled in the center of the road. That provides a lot of cover, assuming the contact is coming from the front. It should be angled to provide a maximum of cover, while being able to move forward or go in reverse without switching between them.</li>
     </ul>
     <figure>
         <img src="/wiki/images/HMMWV.png" title="HMMWV.png" width="150" alt="HMMWV.png" style="background-color: black" /><figcaption aria-hidden="true">HMMWV.png</figcaption>
